animation test working

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Stats]
-Pos=55,34
-Size=567,212
+Pos=90,37
+Size=567,184
 Collapsed=0
 
 [Window][background]
-Pos=1364,135
+Pos=1454,134
 Size=808,450
+Collapsed=0
+
+[Window][Transform]
+Pos=1538,117
+Size=413,78
 Collapsed=0
 
