--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.12)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "-O2 -Wall -Wextra -pedantic -g")
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # set(CMAKE_CXX_FLAGS "-DNDEBUG -O3")
 
 
@@ -81,3 +82,4 @@ target_link_libraries(ambf-vulkan PUBLIC ${XRANDR})
 
 find_library(DL dl)
 target_link_libraries(ambf-vulkan PUBLIC ${DL})
+
